# wireguard-api

./: .all-contributorsrc  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  api.py  compose.yaml  health.py  metrics.py  pyproject.toml  service_run  wireguard.py
.github/workflows/: github-publish.yml  greetings.yml  public-docker.yml  publish-docker.yml  publish-github.yml  release.yml  tests.yml
tests/: test_api.py  test_health.py  test_metrics.py  test_persistence.py  test_wireguard.py
