[project]
name = "wireguard-api"
version = "0.2.0"
description = "VPN node based in Wireguard with an API exposed to receive commands"
authors = [
    {name = "Carlos Lugones", email = "contact@lugodev.com"},
    {name = "Reinier Hernández", email = "sasuke.reinier@gmail.com"},
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff",
]
