[project]
name = "wireguard-api"
version = "0.2.0"
description = "VPN node based in Wireguard with an API exposed to receive commands"
authors = [
    {name = "Reinier Hernández", email = "sasuke.reinier@gmail.com"},
    {name = "Carlos Lugones", email = "contact@lugodev.com"},
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
